# points_hw

./: .gitignore  README.rst  docker-compose.yml  pyproject.toml
.github.workflows/: linter-and-tester.yml
.github/workflows/: linter-and-tester.yml
app/: autoroute_api_processor.py  main.py
backend/: README.rst
docker/: Dockerfile  docker-entrypoint.sh
scr/: server.py
test_data/: test.json
tests/: test_server.py
