[tool.poetry]
name = "points_hw_1"
version = "0.1.0"
description = "assignment pertinent to fullstack position"
authors = ["AlejandroH <azhernlex@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
requests = "^2.27.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
